{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 36,
  "lineage": "77f687ed-fc98-bdab-8482-e3b25719f34a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:715924016302:internet-gateway/igw-0949b6d3311dc8df0",
            "id": "igw-0949b6d3311dc8df0",
            "owner_id": "715924016302",
            "region": "eu-north-1",
            "vpc_id": "vpc-05080961c56879616"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715924016302",
            "id": "igw-0949b6d3311dc8df0",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:715924016302:route-table/rtb-0202830de8d967d9f",
            "id": "rtb-0202830de8d967d9f",
            "owner_id": "715924016302",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0949b6d3311dc8df0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05080961c56879616"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715924016302",
            "id": "rtb-0202830de8d967d9f",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1f8c9c99c11a64a",
            "region": "eu-north-1",
            "route_table_id": "rtb-0202830de8d967d9f",
            "subnet_id": "subnet-0091a657cb6f3fbca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715924016302",
            "id": "rtbassoc-0e1f8c9c99c11a64a",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "movie_recommendation_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:715924016302:security-group/sg-082ac168e7713bc4e",
            "description": "allow inbound traffic on p8000 and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-082ac168e7713bc4e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "movie_recommendation_sg",
            "name_prefix": "",
            "owner_id": "715924016302",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "movie_recommendation_sg"
            },
            "tags_all": {
              "Name": "movie_recommendation_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05080961c56879616"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715924016302",
            "id": "sg-082ac168e7713bc4e",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:715924016302:subnet/subnet-0091a657cb6f3fbca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0091a657cb6f3fbca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "715924016302",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "vpc_id": "vpc-05080961c56879616"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715924016302",
            "id": "subnet-0091a657cb6f3fbca",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:715924016302:vpc/vpc-05080961c56879616",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-092c2d66726024792",
            "default_route_table_id": "rtb-012dd16562679f3ad",
            "default_security_group_id": "sg-0b46f7181c38031b2",
            "dhcp_options_id": "dopt-0c4be4212305a9534",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05080961c56879616",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-012dd16562679f3ad",
            "owner_id": "715924016302",
            "region": "eu-north-1",
            "tags": {
              "Name": "movie-recommendation-vpc"
            },
            "tags_all": {
              "Name": "movie-recommendation-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "715924016302",
            "id": "vpc-05080961c56879616",
            "region": "eu-north-1"
          }
        }
      ]
    }
  ]
}